objects/NewCompetitor__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NewCompetitor</relationshipLabel>
        <relationshipName>NewCompetitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>NewCompetitor</relationshipLabel>
        <relationshipName>NewCompetitor</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>NewCompetitor</relationshipLabel>
        <relationshipName>NewCompetitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueString__c</fullName>
        <label>UniqueString</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>NewCompetitor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>NewCompetitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NewCompetitor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>